--- a/Weeks/WK3/ex1.html
+++ b/Weeks/WK3/ex1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>My Web Page!</title>
-<link rel="stylesheet" href="demo1.css" />
+<link rel="stylesheet" href="demo.css" />
 </head>
 <body>
 <header>
