--- a/Weeks/WK3/ex1.html
+++ b/Weeks/WK3/ex1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>My Web Page!</title>
-<link rel="stylesheet" href="demo.css" />
+<link rel="stylesheet" href="demo1.css" />
 </head>
 <body>
 <header>
@@ -26,20 +26,30 @@
     Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
 
     Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
-    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
-    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
-    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
-    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
-    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
-    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
-    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
-    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
-    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
     Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....LLorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
     Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
-   
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....
 </p>
 </main>
+<empty class="emptyStyle">
+    empty
+</empty>
 <aside>
 Right hand side
 </aside>
