--- a/Weeks/WK3/ex1.html
+++ b/Weeks/WK3/ex1.html
@@ -44,7 +44,7 @@
     Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
     Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
     Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
-    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....
+    Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum.... Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....Lorem ipsum....
 </p>
 </main>
 <empty class="emptyStyle">
